--- a/index.html
+++ b/index.html
@@ -124,14 +124,23 @@
 
 </div>
 
-<!-- Instagram link removed -->
-
 <div class="landing-page">
     <img id="landing-logo" src="Elements/image/logo.svg" alt="Logo">
 </div>
 
 <div class="zoom-out-page">
     <h1>Pourquoi dézoom-tu autant ? 🤨</h1>
+</div>
+
+<div class="social-links">
+    <a href="https://www.instagram.com/leotosku/" target="_blank" class="social-link">
+        <i class="fab fa-instagram"></i>
+        <span class="social-label">Instagram</span>
+    </a>
+    <a href="https://www.linkedin.com/in/l%C3%A9o-tosku-8432242a0/" target="_blank" class="social-link">
+        <i class="fab fa-linkedin"></i>
+        <span class="social-label">LinkedIn</span>
+    </a>
 </div>
 
 <!-- Script -->
