--- a/SandFall/blog.html
+++ b/SandFall/blog.html
@@ -70,10 +70,9 @@
 						<i class="fas fa-search"></i>
 					</button>
 				</div>
-			</div>
-			<div class="blog-grid" id="blog-posts">
+			</div>			<div class="blog-grid" id="blog-posts">
 				<div class="loading-spinner">
-					<div class="spinner"></div>
+					<img src="images/loading-spinner.gif" alt="Loading..." class="spinner">
 					<p>Loading articles...</p>
 				</div>
 			</div>
