--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <div class="achievement-item" data-achievement="trophy">
                 <div class="achievement-content">
                     <div class="achievement-icon">
-                        <i class="fas fa-trophy"></i>
+                        <img src="Elements/image/svg/tnsi.svg" alt="Trophée NSI">
                     </div>
                     <div class="achievement-info">
                         <h3 class="achievement-title">Prix Spécial du Jury</h3>
@@ -71,7 +71,7 @@
             <div class="achievement-item" data-achievement="innovation">
                 <div class="achievement-content">
                     <div class="achievement-icon">
-                        <i class="fas fa-c"></i>
+                        <img src="Elements/image/svg/cid.svg" alt="Caribbean Innovation Days">
                     </div>
                     <div class="achievement-info">
                         <h3 class="achievement-title">Innovation Caribéenne</h3>
@@ -82,7 +82,7 @@
             </div>              <div class="achievement-item" data-achievement="participation">
                 <div class="achievement-content">
                     <div class="achievement-icon">
-                        <i class="fas fa-wine-glass-empty"></i>
+                        <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
                     </div>
                     <div class="achievement-info">
                         <h3 class="achievement-title">Networking Professionnel</h3>
