--- a/smag/index.html
+++ b/smag/index.html
@@ -85,7 +85,7 @@
             <p>No Derivatives: You may be prohibited from creating derivative works based on the original song.</p>
           </li>
           <h3 style="margin-top: 50px;">Do you want your own professionally made songs ?</h3>
-          <li><p>You can support Solargress by committing songs for a fair price on his Ko-Fi page: <a href="https://ko-fi.com/solargress" style="text-decoration: none;"><strong>https://ko-fi.com/solargress</strong></a></p></li>
+          <li><p>You can support Solargress by committing songs for a fair price on his Ko-Fi page: <br> <a href="https://ko-fi.com/solargress" style="text-decoration: none;"><strong>https://ko-fi.com/solargress</strong></a></p></li>
         </div>  
         <h4>© Copyright 2020-2025 SMAG Team</h4> 
       </div>
