--- a/smag/index.html
+++ b/smag/index.html
@@ -59,7 +59,7 @@
               <p>• A completely new original soundtrack</p>
               <p>• A new story</p>
               <p>• A new observatory to visit</p>
-              <p>• Support for all major versions <strong>(American, European, Japanese, Korean and Taïwanese)</strong></p>
+              <p>• Support for all major versions <strong>(American, European, Japanese, Korean and Taiwanese)</strong></p>
             </li>
           </ul>
         </div>       
