--- a/DIP15/index.html
+++ b/DIP15/index.html
@@ -13,8 +13,10 @@
   <link rel="stylesheet" href="apps/app1/style.css">
   <link rel="stylesheet" href="apps/app2/style.css">
   <link rel="stylesheet" href="apps/app3/style.css">
+  <link rel="stylesheet" href="apps/app4/style.css">
   <link rel="stylesheet" href="apps/app6/style.css">
   <link rel="stylesheet" href="apps/app8/style.css">
+  <link rel="stylesheet" href="apps/app9/style.css">
 </head>
 <body>
   <div class="overlay">
@@ -121,8 +123,10 @@
   <script src="apps/app1/app.js"></script>
   <script src="apps/app2/app.js"></script>
   <script src="apps/app3/app.js"></script>
+  <script src="apps/app4/app.js"></script>
   <script src="apps/app6/app.js"></script>
   <script src="apps/app8/app.js"></script>
+  <script src="apps/app9/app.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
