--- a/DIP15/index.html
+++ b/DIP15/index.html
@@ -118,6 +118,7 @@
 
   <div id="metadata" class="metadata"><i class="fa-regular fa-circle-user"></i> Keira Mayhew</div>
   <script src="get-directory.js"></script>
+  <script src="universal-launcher.js"></script>
   <script src="app-launcher.js"></script>
   <script src="window-manager.js"></script>
   <script src="apps/app1/app.js"></script>
