--- a/DIP15/desktop.html
+++ b/DIP15/desktop.html
@@ -15,9 +15,12 @@
     <link rel="stylesheet" href="apps/app2/style.css">
     <link rel="stylesheet" href="apps/app3/style.css">
     <link rel="stylesheet" href="apps/app4/style.css">
+    <link rel="stylesheet" href="apps/app5/style.css">
     <link rel="stylesheet" href="apps/app6/style.css">
+    <link rel="stylesheet" href="apps/app7/style.css">
     <link rel="stylesheet" href="apps/app8/style.css">
     <link rel="stylesheet" href="apps/app9/style.css">
+    <link rel="stylesheet" href="apps/app10/style.css">
 </head>
 <body>
     <!-- Desktop Background -->
