--- a/DIP15/desktop.html
+++ b/DIP15/desktop.html
@@ -106,6 +106,8 @@
     <script src="apps/app6/app.js"></script>
     <script src="apps/app8/app.js"></script>
     <script src="apps/app9/app.js"></script>
+    <script src="apps/app10/app.js"></script>
+    <script src="apps/app5/app.js"></script>
     
     <!-- Main Desktop Script -->
     <script src="script.js"></script>
