--- a/index.html
+++ b/index.html
@@ -14,20 +14,20 @@
     <img id="logo" src="Elements/image/logo.svg" Alt="Logo">
     <div class="text-container">
         <span class="name"><strong>Léo Tosku</strong></span>
-        <span class="description">3D et Webdesign</span>
+        <span class="description">3D & Web Design</span>
     </div>
     <div class="links-container">
         <!--Desktop-->
-        <a href="#" class="link" id="everything">Tout</a>
-        <a href="#" class="link" id="personal-project">Projets personnels</a>
+        <a href="#" class="link" id="everything">All</a>
+        <a href="#" class="link" id="personal-project">Personal Projects</a>
         <a href="#" class="link" id="commissions">Commissions</a>
-        <a href="#" class="link" id="art-link">Art</a>
-        <a href="#" class="link" id="info-link">Infos</a>
+        <!-- <a href="#" class="link" id="art-link">Art</a> -->
+        <a href="#" class="link" id="info-link">About</a>
         <a href="#" class="link" style="pointer-events: none;">|</a>
         <a href="Elements/image/CV.pdf" target="_blank" class="download">CV<span class="material-symbols-outlined" style="font-size: 3.5vh;">download</span></a>
         <!--Mobile-->
         <a href="#" class="link-mobile" id="everything-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">dashboard</span></a>
-        <a href="#" class="link-mobile" id="art-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">landscape_2</span></a>
+        <!-- <a href="#" class="link-mobile" id="art-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">landscape_2</span></a> -->
         <a href="#" class="link-mobile" id="info-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">info</span></a>
         <a href="Elements/image/CV.pdf" class="download-mobile" target="_blank"><span class="material-symbols-outlined" style="font-size: 3.5vh;">Description</span></a>
     </div>
@@ -37,23 +37,23 @@
 
 <header id="header">
     <div class="header-content">
-        <h1>ELEGANCE ET <br> SIMPLICITE</h1>
+        <h1>ELEGANCE AND <br> SIMPLICITY</h1>
     </div>
     <div class="scrolling-bands">
         <div class="band band1">
             <div class="scrolling-text">
-                <p>Web Design • Modélisation 3D • Créations uniques • Programmation • Digital Design • </p>
+                <p>Web Design • 3D Modeling • Unique Creations • Programming • Digital Design • </p>
             </div>
         </div>
         <div class="band band2">
             <div class="scrolling-text">
-                <p>Digital Design • Programmation • Créations uniques • Modélisation 3D • Web Design • </p>
+                <p>Digital Design • Programming • Unique Creations • 3D Modeling • Web Design • </p>
             </div>
         </div>
     </div>    <div class="achievements">
         <div class="achievements-header">
-            <h2 class="achievements-title">Mes Réalisations</h2>
-            <div class="achievements-subtitle">L'excellence reconnue par mes pairs</div>
+            <h2 class="achievements-title">My Achievements</h2>
+            <div class="achievements-subtitle">Excellence recognized by my peers</div>
         </div>
         <div class="achievements-container">            
             <div class="achievement-item" data-achievement="trophy">
@@ -74,7 +74,7 @@
                         <img src="Elements/image/svg/cid.svg" alt="Caribbean Innovation Days">
                     </div>
                     <div class="achievement-info">
-                        <h3 class="achievement-title">Innovation Caribéenne</h3>
+                        <h3 class="achievement-title">Caribbean Innovation</h3>
                         <p class="achievement-description">Caribbean Innovation Days 2024</p>
                         <div class="achievement-badge">Innovation</div>
                     </div>
@@ -85,7 +85,7 @@
                         <img src="Elements/image/svg/ufl.svg" alt="Up for Life">
                     </div>
                     <div class="achievement-info">
-                        <h3 class="achievement-title">Networking Professionnel</h3>
+                        <h3 class="achievement-title">Professional Networking</h3>
                         <p class="achievement-description">Up for Life 2024-2025</p>
                         <div class="achievement-badge">Business</div>
                     </div>
@@ -95,16 +95,29 @@
     </div>
 </header>
     <div id="infos" style="display:none;">
-        <h1>Qui suis-je ?</h1>
-        <h3 class="subtitle">Je suis un designer et modeleur 3D autodidacte basé en Guadeloupe. <br><br> J'ai commencé mon parcours en design numérique à l'âge de 10 ans. Depuis, j'ai contribué à de nombreux projets indépendants importants dans l'archipel, démontrant une passion pour les styles modernes et simplistes.<br><br> En plus de mes compétences en design, Je me suis plongé dans la modélisation 3D ainsi que la programmation dès l'âge de 12 ans, apportant ma vision créative à de nombreux projets de jeux vidéo. <br><br> Pour de nouveaux projets ou plus d'infos : <br><strong><a href="mailto:leotoskuepro@gmail.com">Leotoskuepro@gmail.com</a></strong></h3>
-        <div class="info-img-container">
-            <img src="Elements/image/LéoTosku.jpg" alt="Profile Image" class="info-img">
+        <div class="infos-container">
+            <div class="infos-content">
+                <h1>Who am I?</h1>
+                <h3 class="subtitle">Self-taught 3D designer and modeler with an adventurous spirit based in Cannes, France. <br><br> Passionate about digital design since the age of 10, I create projects with modern and minimalist styles, combining creativity and functionality. <br><br> Specialized in 3D modeling and web development, I bring a unique vision to each project. <br><br> From growing up in Southern France to living 5 years in Guadeloupe and 1 year in Thailand, this multicultural journey has shaped me into an adaptable, open-minded creative who thrives on cultural diversity and new challenges. <br><br> For new projects: <br><strong><a href="mailto:leotoskuepro@gmail.com">Leotoskuepro@gmail.com</a></strong></h3>
+                
+                <!-- Entreprises -->
+                <div class="companies-section">
+                    <h2>Companies that trusted me</h2>
+                    <div class="companies-logos">
+                        <!-- Companies will be loaded dynamically -->
+                    </div>
+                </div>
+            </div>
+            
+            <div class="info-img-container">
+                <img src="Elements/image/LéoTosku.jpg" alt="Profile Image" class="info-img">
+            </div>
         </div>
     </div>
 
 <!-- 3D Art Gallery -->
 <div id="art-gallery" style="display:none;">
-    <h1>Mes Créations Artistiques</h1>
+    <h1>My Artistic Creations</h1>
     <div class="art-gallery-container">
         <!-- Art items will be loaded dynamically -->
     </div>
@@ -114,8 +127,8 @@
 <!-- Website Gallery -->
 <div class="projects-section">
     <div class="projects-header">
-        <h2 class="projects-title">Mes Projets Web</h2>
-        <div class="projects-subtitle">Portfolio de créations digitales</div>
+        <h2 class="projects-title">My Web Projects</h2>
+        <div class="projects-subtitle">Digital creations portfolio</div>
     </div>
     <div id="gallery" class="gallery">
         <!-- Projects will be loaded dynamically -->
@@ -129,7 +142,7 @@
 </div>
 
 <div class="zoom-out-page">
-    <h1>Pourquoi dézoom-tu autant ? 🤨</h1>
+    <h1>Why are you zooming out so much? 🤨</h1>
 </div>
 
 <div class="social-links">
